# nrf52840-mdk-usb-dongle

./: LICENSE  README.md
blinky/: .gitignore  CMakeLists.txt  build.sh  main.c
blinky/config/: custom_board.h  nrf52840-arm-gcc-toolchain.cmake  nrf52840_mdk_usb_dongle.h
blinky/tools/: uf2conv.py
